# AnalyticalMapServices

./: .gitignore  ARCHITECTURE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  security-bugfix-plan.md
.planning/phases/01-backend-correctness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/app/: cache.py  config.py  main.py
backend/src/app/clients/: _utils.py  geonorge.py  grunnforurensning.py  http.py  kartverket.py  kulturminner.py  naturvern.py  stoy.py  wms.py
backend/src/app/domain/: types.py
backend/src/app/domain/parsers/: _common.py  _generelt_config.py  generelt.py  klima.py  risiko.py
backend/src/app/routers/: addresses.py  feature_info.py  properties.py
backend/src/app/services/: address.py  feature_info.py  property.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  style.css
frontend/src/features/map/: MapPageView.tsx  map.css
frontend/src/features/map/api/: addressSearch.ts  schemas.ts  types.ts
frontend/src/features/map/config/: baseLayers.ts  wms-validation.md  wmsLayers.ts
frontend/src/features/map/domain/: constants.ts  featureInfoTypes.ts  (+4 more)
frontend/src/layouts/: AppShell.tsx
frontend/src/pages/: About.tsx  Changelog.tsx  Home.tsx  Settings.tsx
frontend/src/shared/ui/: AmsLogo.tsx  AppErrorBoundary.tsx  Header.tsx  Sidebar.tsx  UserChip.tsx
frontend/src/stores/: appStore.ts  sidebarStore.ts  themeStore.ts
(+40 files in other folders)
